# SimpleLib

./: .gitignore  CMakeLists.txt  README.md  app.cpp
frontend/: Lib.html  lib.css  lib.jsx  test.html
